Intento de filtro

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <h1>Multiforo<small> Encuentra todo lo que buscas...</small></h1>
       </div>
     </header>
+
+    <!-- para la búsqueda -->
+    <form id="search-form" class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input id="search" type="text" class="form-control" placeholder="Busca tu tema favorito...">
+      </div>
+      <button type="submit" class="btn btn-default">Buscar</button>
+    </form>
     <!-- modal para crear nuevo tema -->
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
      Agregar tarea
